namespaces/live-1.cloud-platform.service.justice.gov.uk/uat.claim-criminal-injuries-compensation/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uat.claim-criminal-injuries-compensation
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "UAT"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "CICA"
    cloud-platform.justice.gov.uk/application: "claim-web-uat"
    cloud-platform.justice.gov.uk/owner: "CICA: Infrastructure@cica.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ermiasworku/uat.claim-criminal-injuries-compensation"
